--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,7 +16,7 @@ main {
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.411)
 
 }
- h1 {
+ h1{
     font-size: 2em;
     color: rgb(58, 0, 112);
  }
@@ -26,4 +26,16 @@ main {
     color: rgb(58, 0, 112);
  }
 
- 
+ a{
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(58,0,112);
+    
+ }
+
+ a:hover{
+    text-decoration: underline;
+    color: rgb(26,26,255);
+ }
+
+
